# safari-history-alfred-workflow

./: Cargo.toml
src/: errors.rs  main.rs  server.rs  util.rs
